2011-09-05  Juri Linkov  <juri@jurta.org>

	* grep.txt: Add `eval' to the Local Variables section that
	emulates `grep-filter'.

2011-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	* MACHINES: Remove obsolete info and update a bit (Bug#9404).

	* PROBLEMS: Remove obsolete comment re Yellow Dog (Bug#9403).

2011-08-24  Steve Chapel  <schapel@laptop.stevechapel.com>  (tiny change)

	* refcards/refcard.tex: Add a few more commands. (Bug#9343)

2011-08-22  Juri Linkov  <juri@jurta.org>

	* compilation.txt: Add more samples of output and non-output
	switches (bug#9319).

2011-08-19  Chong Yidong  <cyd@stupidchicken.com>

	* themes/dichromacy-theme.el:
	* themes/wheatgrass-theme.el:
	* themes/tango-theme.el:
	* themes/tango-dark-theme.el: Add error, warning, and success
	faces.

2011-08-15  Carsten Dominik  <carsten.dominik@gmail.com>

	* refcards/orgcard.tex: Document `org-copy-visible'.

2011-08-15  Eric Schulte  <schulte.eric@gmail.com>

	* refcards/orgcard.tex: Documentation of new Babel function.

2011-08-15  Eric Schulte  <schulte.eric@gmail.com>

	* refcards/orgcard.tex: Adding line for org-babel-check-src-block.

2011-08-15  Carsten Dominik  <carsten.dominik@gmail.com>

	* refcards/orgcard.tex: Document key for clock consistency check.

2011-07-30  Chong Yidong  <cyd@stupidchicken.com>

	* grammars: New directory.

2011-07-28  Andreas Schwab  <schwab@linux-m68k.org>

	* NEWS: Document ## and #:.

2011-07-18  Andreas Schwab  <schwab@linux-m68k.org>

	* charsets/GB180302.map: Update to 2005 edition.
	* charsets/GB180304.map: Likewise.

2011-07-17  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.2.93.

	* NEWS, MH-E-NEWS: Update for MH-E release 8.2.93.

2011-07-16  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.2.92.

	* NEWS, MH-E-NEWS: Update for MH-E release 8.2.92.

2011-07-12  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.2.91.

	* NEWS, MH-E-NEWS: Update for MH-E release 8.2.91.
